fix: scrollbar

--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -2,6 +2,7 @@
 
 * {
   font-family: 'Mulish', sans-serif;
+  /* overflow: hidden; */
 }
 
 .bg-red {
@@ -24,8 +25,8 @@ html {
 body {
   background-color: #F1F7F8;
   box-sizing: border-box;
-  width: 100%;
-  height: 100%;
+  width: 99%;
+  height: 98%;
   padding: 1.5% 1.5% 1.5% 1.5%;
 }
 
